content/core/1.2.0/reference/vendr-web-adapters/umbracoproductsnapshot.md
---
title: UmbracoProductSnapshot
description: API reference for UmbracoProductSnapshot in Vendr, the eCommerce solution for Umbraco v8+
---
## UmbracoProductSnapshot

```csharp
public class UmbracoProductSnapshot : ProductSnapshotBase
```

**Inheritance**

* class [ProductSnapshotBase](../../vendr-core-models/productsnapshotbase/)

**Namespace**
* [Vendr.Web.Adapters](../)

### Constructors

#### UmbracoProductSnapshot

```csharp
public UmbracoProductSnapshot(VendrServiceContext vendrServices, IPublishedContent content, 
    string languageIsoCode, string productReference)
```


### Properties

#### Content

```csharp
public IPublishedContent Content { get; }
```


---

#### IsGiftCard

```csharp
public override bool IsGiftCard { get; }
```


---

#### Name

```csharp
public override string Name { get; }
```


---

#### Prices

```csharp
public override IEnumerable<ProductPrice> Prices { get; }
```


---

#### ProductReference

```csharp
public override string ProductReference { get; }
```


---

#### Properties

```csharp
public override IDictionary<string, string> Properties { get; }
```


---

#### Sku

```csharp
public override string Sku { get; }
```


---

#### StoreId

```csharp
public override Guid StoreId { get; }
```


---

#### TaxClassId

```csharp
public override Guid? TaxClassId { get; }
```


<!-- DO NOT EDIT: generated by xmldocmd for Vendr.Web.dll -->
