content/core/1.6.0/reference/vendr-web-adapters/umbracoproductsnapshot.md
---
title: UmbracoProductSnapshot
description: API reference for UmbracoProductSnapshot in Vendr, the eCommerce solution for Umbraco v8+
---
## UmbracoProductSnapshot

```csharp
public class UmbracoProductSnapshot : ProductSnapshotBase
```

**Inheritance**

* class [ProductSnapshotBase](../../vendr-core-models/productsnapshotbase/)

**Namespace**
* [Vendr.Web.Adapters](../)

### Constructors

#### UmbracoProductSnapshot (1 of 4)

```csharp
public UmbracoProductSnapshot(IPublishedContent content, string languageIsoCode, 
    string productReference)
```

---

#### UmbracoProductSnapshot (2 of 4)

```csharp
public UmbracoProductSnapshot(IPublishedContent content, IPublishedElement variantContent, 
    string languageIsoCode, string productReference, string productVariantReference)
```

---

#### UmbracoProductSnapshot (3 of 4)

```csharp
public UmbracoProductSnapshot(IPublishedContent content, string languageIsoCode, 
    string productReference, IUmbracoProductNameExtractor umbracoProductNameExtractor, 
    VendrServiceContext vendrServices)
```

---

#### UmbracoProductSnapshot (4 of 4)

```csharp
public UmbracoProductSnapshot(IPublishedContent content, IPublishedElement variantContent, 
    string languageIsoCode, string productReference, string productVariantReference, 
    IUmbracoProductNameExtractor umbracoProductNameExtractor, VendrServiceContext vendrServices)
```


### Properties

#### Attributes

```csharp
public override IEnumerable<AttributeCombination> Attributes { get; }
```


---

#### Content

```csharp
public IPublishedContent Content { get; }
```


---

#### IsGiftCard

```csharp
public override bool IsGiftCard { get; }
```


---

#### Name

```csharp
public override string Name { get; }
```


---

#### Prices

```csharp
public override IEnumerable<ProductPrice> Prices { get; }
```


---

#### ProductReference

```csharp
public override string ProductReference { get; }
```


---

#### ProductVariantReference

```csharp
public override string ProductVariantReference { get; }
```


---

#### Properties

```csharp
public override IDictionary<string, string> Properties { get; }
```


---

#### Sku

```csharp
public override string Sku { get; }
```


---

#### StoreId

```csharp
public override Guid StoreId { get; }
```


---

#### TaxClassId

```csharp
public override Guid? TaxClassId { get; }
```


---

#### VariantContent

```csharp
public IPublishedElement VariantContent { get; }
```


<!-- DO NOT EDIT: generated by xmldocmd for Vendr.Web.dll -->
